style.css
.container {
    overflow-y: scroll;
    /* Ensures the container is scrollable */
    -ms-overflow-style: none;
    /* IE and Edge */
    scrollbar-width: none;
    /* Firefox */
}

.container::-webkit-scrollbar {
    display: none;
    /* Chrome, Safari, and Opera */
}

#dark-mode-toggle {
    border-radius: 50%;
    position: fixed;
    top: 20px;
    right: 20px;
    cursor: pointer;
    overflow: hidden;
}

#dark-mode-toggle img {
    width: 30px;
    height: 30px;
}


.dark_back .back_class{
    background-color: #1a1a1a;
    color: #fff;
}

body.dark-mode {
    background-image: url('texters/dark_mode.png');
}

body {
    width: 100vw;
    height: 100vh;
    overflow-x: hidden;
    /* Hide overflow on the left and right */
    overflow-y: auto;
    font-family: Arial, sans-serif;
    background-image: url('texters/white_back.jpg');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

header {
    color: white;
    padding: 1rem;
    text-align: center;
}

.video-back {
    position: absolute;
    top: 0;
    left: 0;
    width: 102%;
    height: 45%;
    z-index: -1;
    overflow: hidden;
}

#header-video {
    min-width: 100%;
    min-height: 100%;
    position: absolute;
    transform: translate(-50%, -50%);
}

.header-photo {
    display: flex;
    align-items: center;
    justify-content: center;
}

#head-photo {
    border-radius: 50%;
    width: 200px;
    height: 200px;
    margin-right: 1rem;
}

#head-photo:hover {
    transform: translateY(-10px);
    box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.2);
}

#Name {
    font-size: large;
    color: white;
    font-family: initial;
}

nav ul {
    list-style: none;
    padding: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

nav ul li {
    border-radius: 50%;
    display: inline-block;
    width: 60px;
    height: 60px;
    margin: 0 1rem;
    overflow: hidden;
    transition: all 0.3s ease;
    position: relative;
}

nav ul li a {
    display: block;
    width: 60%;
    height: 60%;
    text-indent: -9999px;
}

nav ul li:hover {
    transform: scale(1.05);
}

nav ul .Linkdin {
    background-image: url('texters/linkedin-item.png');
    background-size: cover;
    background-position: center;
}

nav ul .Github {
    background-color: white;
    background-image: url('texters/github-item.png');
    background-size: cover;
    background-position: center;
}

nav ul .Twitter {
    background-color: white;
    background-image: url('texters/twitterx-item.png');
    background-size: cover;
    background-position: center;
}

main {
    padding: 2rem;
}

dev {
    margin-bottom: 2rem;
}

.description {
    background-color: #fff;
    border-radius: 10px;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
    padding: 30px;
    transition: 0.6s all;
}

.description h1 {
    font-size: 36px;
    font-family: fantasy;
    color: #52a7db;
    text-align: center;
    margin-bottom: 20px;
}

.description:hover {
    transform: translateY(-10px);
    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
}

/* .dark-mode .description {
    color: black;
} */

h1 {
    font-size: 36px;
    text-align: center;
    font-weight: bold;
    color: #333;
    margin-bottom: 10px;
}

#content{
    display: flex;
    align-items: center;
}

#content img {
    width: 500px;
    height: 500px;
    margin: 60px auto;
    max-width: 50%;
    /* margin-right: 20px; */
}

#career {
    display: flex;
    flex-wrap: wrap;
    max-width: 50%;
    margin: 60px 10px;
    padding: 10px;
    border-radius: 10px;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
    transition: 0.6s all;
}

#career h1 {
    width: 100%;
    font-size: 36px;
    font-family: fantasy;
    color: #52a7db;
    text-align: center;
    margin-bottom: 20px;
}

#career:hover {
    transform: translateY(-10px);
    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
}

.career-list {
    list-style: none;
    padding: 0;
    margin: 0;
}

.career-list li {
    border-bottom: 1px solid #e0e0e0;
    padding: 20px 0;
}

.career-list li:last-child {
    border-bottom: none;
}

.career-list h2 {
    font-size: 24px;
    color: #2c3e50;
    margin: 0 0 10px 0;
}

.career-list p {
    font-size: 16px;
    color: #333;
    line-height: 1.5;
    margin: 0 0 10px 0;
}

.dark-mode .career-list h2{
    color: #fff;
}

.dark-mode .career-list p{
    color: #e0e0e0;
}

.career-duration {
    font-size: 14px;
    color: #95a5a6;
    font-style: italic;
}

.projects-container h1 {
    font-size: 36px;
    font-family: fantasy;
    color: #52a7db;
    text-align: center;
    margin-bottom: 20px;
    overflow-x: hidden;
    white-space: nowrap;
}

.projects-wrapper {
    overflow: hidden;
    width: 100%;
    position: relative;
}

.projects {
    display: grid;
    align-items: center;
    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
    gap: 50px;
    animation: slide 10s linear infinite alternate;
}

.project {
    background-color: #fff;
    border-radius: 40px;
    box-sizing: border-box;
    box-shadow: 0px 0px 30px rgba(138, 24, 24, 0.1);
    overflow: hidden;
    min-width: 300px;
    display: flex;
    flex-direction: column;
    position: relative;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
    text-align: center;
}

.project:hover {
    transform: translateY(-10px);
    /* Slightly lift the card */
    box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.2);
}

.project img {
    width: 100%;
    height: 350px;
    object-fit: cover;
    border-radius: 25px 25px 0 0;
}

.project-title {
    font-size: 24px;
    color: #111010;
    margin: 15px 0;
}

.project-info {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 100%;
    background-color: rgba(240, 232, 235, 0.8);
    padding: 25px;
    box-sizing: border-box;
    flex-grow: 1;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    opacity: 0;
    transition: opacity 0.3s ease;
    z-index: 1;
}

.project:hover .project-info {
    transform: translateY(0);
    opacity: 1;
}

.project-info p {
    font-family: Arial, Helvetica, sans-serif;
    font-style: oblique;
    font-size: 16px;
    color: #382e2e;
    margin-bottom: 20px;
    line-height: 1.5;
    text-align: justify;
}

.project-info .btn-container {
    display: flex;
    justify-content: flex-end;
    /* Align button to the right */
    margin-top: auto;
}

.btn {
    display: inline-block;
    padding: 10px 10px;
    background-color: #3498db;
    color: #fff;
    text-decoration: none;
    border-radius: 5px;
    transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
    /* Smooth transitions for background, transform, and box-shadow */
}

.btn:hover {
    background-color: #2980b9;
    border: #111010;
    transform: scale(1.05);
    /* Slightly enlarge the button */
    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
}

#contact {
    display: flex;
    flex-wrap: wrap;
    max-width: 800px;
    margin: 50px auto;
    padding: 20px;
    background-color: #fff;
    border-radius: 10px;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
    transition: 0.6s all;
}

#contact img {
    width: 300px;
    height: auto;
    margin-right: 20px;
}

#contact h1 {
    width: 100%;
    font-size: 36px;
    font-family: fantasy;
    color: #52a7db;
    text-align: center;
    margin-bottom: 20px;
}

#contact:hover {
    transform: translateY(-10px);
    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
}

#contact-form {
    flex: 1;
    display: flex;
    flex-direction: column;
}

#contact-form label {
    display: grid;
    padding: 3px;
    margin-bottom: 10px;
    align-items: center;
    color: #666;
}

#contact-form input[type="text"],
#contact-form input[type="email"],
#contact-form textarea {
    width: 100%;
    padding: 10px;
    margin-bottom: 20px;
    border: 1px solid #433232;
    border-radius: 5px;
    box-sizing: border-box;
}

#contact-form button {
    width: 30%;
    padding: 10px;
    background-color: #007bff;
    color: #fff;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    transition: background-color 0.3s;
}

#contact-form button:hover {
    background-color: #0056b3;
}

